canvas pointer event: none

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -104,6 +104,7 @@ $font-para: 'Mulish', sans-serif;
                 position: absolute;
                 transform: scale(1.8);
                 max-width: 1300px;
+                pointer-events: none;
 
             }
 
